<resources>
    <string name="app_name">DrawByWalking</string>
    <string name="app_title">Draw By Walking</string>
    <string name="new_button">New canvas</string>
    <string name="load_from_file_button">Load from file</string>
    <string name="drawview_save_button">Save file</string>
    <string name="hide_keyboard">Hide keyboard</string>
    <string name="safe_edittext_hint">Enter filename</string>
    <string name="save_dialog_save_textview">Save</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="loadactivity_title">Load from file</string>
    <string name="share_button">Share</string>
    <string name="main_activity_fragment_instructions">Instructions</string>
    <string name="main_activity_fragment_main">Main</string>
    <string name="instruction_fragment_title">DrawByWalking instructions</string>
    <string name="main_activity_photo_button">Draw on photo</string>
    <string name="camera_activity_proceed_button">Save and proceed</string>
    <string name="camera_activity_choose_filename">Use filename</string>
    <string name="camera_activity_take_photo">Take photo</string>
    <string name="camera_activity_filename_here">Filename here</string>
    <string name="camera_activity_image_description">Photo thumbnail here</string>
    <string name="camera_activity_edittext_autofillhint">Filename</string>
    <string name="load_file_row_image_description">Choose file to load</string>
    <string name="load_file_row_delete_button_description">Delete file</string>
    <string name="color_chooser_seekbar_r_description">Seek bar for red</string>
    <string name="color_chooser_seekbar_g_description">Seek bar for green</string>
    <string name="color_chooser_seekbar_b_description">Seek bar for blue</string>
</resources>
